--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "node-cron": "^3.0.3",
+    "telegraf": "^4.16.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   }
