--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^22.13.1",
     "@types/node-cron": "^3.0.11",
+    "@types/puppeteer": "^7.0.4",
     "@types/winston": "^2.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
@@ -22,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "node-cron": "^3.0.3",
+    "puppeteer": "^24.2.0",
     "telegraf": "^4.16.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
