feat: added retry mechanism to machine state handler feat: added timeout from .env file for puppeteer configuration

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
-TELEGRAM_TOKEN=0
-LOGO_PASSWORD=0
-LOGO_URL=0
+TELEGRAM_TOKEN=token
+LOGO_PASSWORD=password
+LOGO_URL=url
 MODE=production
 LOGLEVEL=info
 MINOKTIME=1
 POLLTIME=2
+PUPTIMEOUT=60000
